# cascii-core-view

./: .gitignore  Cargo.toml  README.md  TODO.MD  ssmver.toml
.github/workflows/: ci.yml  publish-crates.yml  release.yml
hooks/: post-commit  prepare-commit-msg
scripts/: bump_version.py
src/: animation.rs  color.rs  data.rs  details.rs  lib.rs  loader.rs  parser.rs  player.rs  render.rs  sizing.rs
