[package]
name = "cascii-core-view"
version = "0.1.2"
edition = "2021"
description = "Core frame display and animation library for ASCII art viewers"
license = "MIT"
repository = "https://github.com/cascii-project/cascii-core-view"
keywords = ["ascii", "animation", "frames", "viewer"]
categories = ["multimedia", "rendering"]

[features]
default = []
# Enable web/WASM canvas rendering support
web = ["dep:web-sys", "dep:wasm-bindgen", "dep:js-sys", "dep:wasm-bindgen-futures"]
serde = ["dep:serde"]
toml = ["serde", "dep:toml"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }

# Optional: web/WASM support for canvas rendering
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "Document",
    "Element",
] }

[dev-dependencies]
